ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: naro
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  rules:
  - host: www.naro.intranet
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
  tls:
  - hosts:
    - www.naro.intranet
    secretName: secret-tls
